# antirot

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  integration_request.yml  lint_rule_request.yml
.github/workflows/: ci.yml
antirot/: __init__.py  cli.py  linting.py
codex_harness/: __init__.py  audit.py  cli.py  system_audit.py  templates.py
docs/: codex-harness.md  demo-script.md  github-star-audit.md  launch-plan.md  publish-checklist.md  reference-patterns.md  social-posts.md
docs/codex/: agentic-codex-dev-skill.md  clawhub-skills-security.md  evals.md  trusted-clawhub-install-gate-plan-2026-04-24.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.2.0-reproducibility.md  v0.2.0.md
examples/: clean_paper.md  references.md  sloppy_paper.md
scripts/: demo.sh
skills/agentic-codex-dev/: SKILL.md
skills/agentic-codex-dev/agents/: openai.yaml
skills/agentic-codex-dev/references/: publish-checklist.md  source-review.md
skills/clawhub-skills-security/: SKILL.md
skills/clawhub-skills-security/agents/: openai.yaml
skills/clawhub-skills-security/scripts/: audit_clawhub_skill.py
tests/: test_clawhub_skills_security.py  test_cli.py  test_codex_harness.py  test_codex_harness_cli.py  test_codex_harness_system_audit.py  test_linting.py
