[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "antirot"
version = "0.2.0"
description = "Lint Markdown drafts for unsupported claims, weak evidence anchors, broken citations, and draft markers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Zack" }
]
keywords = [
  "linting",
  "research",
  "scientific-writing",
  "markdown",
  "citations",
  "fact-checking",
  "draft-review"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://github.com/zack-dev-cm/antirot"
Repository = "https://github.com/zack-dev-cm/antirot"
Issues = "https://github.com/zack-dev-cm/antirot/issues"
Changelog = "https://github.com/zack-dev-cm/antirot/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
antirot = "antirot.cli:main"

[tool.setuptools]
packages = ["antirot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
